@@ -1,3 +1,8 @@
+2002-08-28  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* [w3m-dev 03290] Re: Forward: Bug#157098: wrong file presentation on large files
+	* indep.c (strtoclen): need defined()
+
 2002-08-21  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* Debian Bug#157098: wrong file presentation on large files
